<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/st_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/st_logo_small"/>
    <LinearLayout
        android:id="@+id/swiperStatusLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/swipe_card_status_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connect_swiper"/>

        <ProgressBar
            android:id="@+id/timeoutProgressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/swipe_card_status_textView"
            style="@style/app_texts"
            android:layout_margin="10dp"
            android:text="@string/connect_swiper"/>

        <Button
            android:id="@+id/swipe_card_try_again_Button"
            style="@style/app_buttons"
            android:text="@string/try_again_text"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardDataLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/server_error_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/server_error_icon"/>
        <ProgressBar
            android:id="@+id/sendProgressBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/sending_data_textView"
            style="@style/app_texts"
            android:textColor="@color/text_color"
            android:text="@string/sending_data_text"/>

        <TextView
            android:id="@+id/please_wait_textView"
            style="@style/app_texts"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:text="@string/please_wait_text"/>

        <TextView
            android:id="@+id/server_error_textView"
            style="@style/app_texts"
            android:textColor="@color/text_error_color"
            android:text="@string/server_temp_unavailable"/>

        <TextView
            android:id="@+id/card_user_name"
            style="@style/app_texts"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/card_number"
            style="@style/app_texts" />

        <Button
            android:id="@+id/send_button"
            android:layout_marginTop="20dp"
            style="@style/app_buttons"
            android:text="@string/send_button"/>
    </LinearLayout>


    <Button
        android:id="@+id/cancel_button"
        style="@style/app_buttons"
        android:layout_margin="10dp"
        android:text="@string/cancel_button"/>

</LinearLayout>
